<resources>
    <string name="app_name">MDP Group 10</string>
    <string name="waypoint">Fastest-Path Waypoint</string>
    <string name="startpoint">Start Coordinate</string>
    <string name="point">Point</string>
    <string name="information">Information</string>
    <string name="status">Status</string>
    <string name="statusStop">Stopped</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="bluetooth_communication">Bluetooth Communication</string>
    <string name="forward">Forward</string>
    <string name="left">Left</string>
    <string name="right">Right</string>
    <string name="f1">F1</string>
    <string name="f2">F2</string>
    <string name="manualControl">Manual</string>
    <string name="settingsBtn">Settings</string>
    <string name="stringf1">String F1</string>
    <string name="stringf2">String F2</string>
    <string name="save">Save</string>
    <string name="configureStrings">Configure F1/F2 Strings</string>
    <string name="f1_key">f1Key</string>
    <string name="f2_key">f2Key</string>
    <string name="FP">Fastest Path</string>
    <string name="exp">Exploration</string>
    <string name="bluetooth_move_forward">AMD|w1</string>
    <string name="bluetooth_move_right">AMD|d1</string>
    <string name="bluetooth_move_left">AMD|a1</string>
    <string name="bluetooth_waypoint">ALG|</string>
    <string name="bluetooth_startpoint">ALG|</string>
    <string name="start_fastest_path">ALG|FP</string>
    <string name="start_exploration">ALG|EXP</string>
    <string name="img_string">Image Strings</string>
    <string name="explored_string">Explore MDF</string>
</resources>